# LarkScout

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  gitignore  i18n.py  larkscout_server.py  pyproject.toml  requirements-ocr-arm64.txt  requirements-ocr-linux-x86_64.txt  requirements.txt
.claude/: settings.json
.claude/commands/: fix.md  implement.md  pr-review.md
.github/workflows/: ci.yml  claude-review.yml
configs/document_profiles/: contract_cn.json  tender_cn.json
configs/field_profiles/: contract_cn.json
docs/: agent-deployment-prompt.md  downstream-content-type-adaptation.md  refactor-modularization-design.md
larkscout_common/: __init__.py  atomic.py  storage.py
providers/: __init__.py  base.py  gemini.py  openai_compat.py  vendor_profiles.py
scripts/: install_ocr_deps.sh  sidecar_metrics.py
skills/: larkscout-browser-SKILL-cn.md  larkscout-browser-SKILL.md  larkscout-docreader-SKILL-cn.md  larkscout-docreader-SKILL.md
tasks/: todo.md
tests/: conftest.py  test_atomic_guards.py  test_concurrency.py  test_csv_parse.py  test_header_footer_strip.py  test_health.py  test_layout_sidecar_contract.py  test_library_endpoints.py  test_markdown_table_extraction.py  test_providers.py  test_region_crop_export.py  test_robustness.py  test_schema_consistency.py  test_sdk.py  test_sectioning_and_locale.py  test_security.py  test_table_candidates.py  test_table_metadata.py  test_text_format_parse.py  test_web_capture.py  test_word_embedded_images.py  test_xlsx_parse.py
(+23 files in other folders)
