[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "larkscout"
version = "0.1.0"
description = "Open-source data collection and document parsing platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ReadyForAI", email = "opensource@readyfor.ai" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "playwright>=1.45.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "google-genai>=0.8.0",
    "Pillow>=10.4.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ReadyForAI/LarkScout"
Repository = "https://github.com/ReadyForAI/LarkScout"

[tool.setuptools.packages.find]
where = ["."]
include = ["larkscout*", "services*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
